--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <table width="100%" cellpadding="0" cellspacing="0">
 <tbody><tr><td width=30%></td><td width=40% align="center"><b>Dr. Liu's Webpage</b></td><td align="right"><a href="index_chn.html">中文版</a></td></tr></tbody></table><div class="container">        <div class="column">
-            <h2 class="section-title">On Coding</h2>
+            <h2 class="section-title">Coding Techniques</h2>
             <h3 class="subsection-title">Python</h3>
             <ul class="link-list">
                 <li><a href="https://github.com/qiangliu-sd/ai-agent-LangGraph" title="A beach-town weather AI agent with all necessary details" target="_blank"><b>AI agents</b> with LangGraph: A working example</a></li>
@@ -20,7 +20,7 @@
             <h3 class="subsection-title">C/C++ with Python, Java, C#</h3>
             <ul class="link-list">
                 <li><a href="https://github.com/qiangliu-sd/Python-calls-C-Linux" title="Call Linux shared-object C (foreign) functions directly via ctypes inside Python: 
-A complete template" target="_blank">Python directly calls C functions (Linux)</a></li>
+A complete template" target="_blank">Python directly calls C functions <b>Linux</b></a></li>
                 <li><a href="https://github.com/qiangliu-sd/Python-calls-C-dll" title="Call Windows C-dll (foreign) functions directly via ctypes inside Python: 
 A complete template" target="_blank">Python directly calls C functions</a></li>
                 <li><a href="https://github.com/qiangliu-sd/Java-calls-C-dll" title="Call Windows C-dll (foreign) functions in Java: 
@@ -30,13 +30,13 @@ A complete template" target="_blank">C# directly calls C functions</a></li>
                 <li><a href="https://github.com/qiangliu-sd/Cpp-Inside-Python" title="Implement a Py-method in C++: 
 A full example" target="_blank">Use C++ to code Py-method for Python</a></li>
             </ul>
-            <h3 class="subsection-title">On Prog-Languages</h3>
+            <h3 class="subsection-title">Software Engineering</h3>
             <ul class="link-list">
-                <li><a href="ql_md_template.html?my.md=coding/proglangs/aiagent_vs_apps.md" title="A LLM with tools are called an AI agent" target="_blank"><b>AI Agents</b> vs Traditional Apps: A Simple Comparison</a></li>
+                <li><a href="ql_md_template.html?my.md=coding/proglangs/aiagent_vs_apps.md" title="A LLM with tools is called an AI agent" target="_blank"><b>AI Agents</b> vs Traditional Apps: A Simple Comparison</a></li>
                 <li><a href="ql_md_template.html?my.md=coding/proglangs/can_py_beat_cpp.md" title="C++ significantly outperforms NumPy (and Python) for both small and big arrays" target="_blank">Can Python outperform C++?</a></li>
                 <li><a href="ql_md_template.html?my.md=coding/proglangs/py_entangle.md" title="C++ extensions can be an excellent solution to the problem of Python parallel entanglement" target="_blank">Python parallel entanglement: A C++ solution</a></li>
             </ul>
-            <h3 class="subsection-title">Know-How</h3>
+            <h3 class="subsection-title">Dev Know-How</h3>
             <ul class="link-list">
                 <li><a href="https://github.com/qiangliu-sd/Windows11-self-signed-certificate" title="A working guide for signing a FILE using self-signed certificate on Windows 11" target="_blank">Self-sign certificate on Windows 11: A working guide</a></li>
             </ul>
@@ -44,8 +44,8 @@ A full example" target="_blank">Use C++ to code Py-method for Python</a></li>
             <h3 class="subsection-title">稳定（代）币</h3>
             <ul class="link-list">
                 <li><a href="ql_md_template.html?my.md=econ/cryptoccy/stablecoin.md" title="稳定币并非法定货币，风险很大" target="_blank">法（定货）币、加密代币与稳定代币</a></li>
-                <li><a href="ql_md_template.html?my.md=econ/cryptoccy/digitcorrupt.md" title="是时候揭穿加密币的真面目了：一个犯罪行当" target="_blank">诺奖得主克鲁格曼:华盛顿的数字腐败</a></li>
-                <li><a href="ql_md_template.html?my.md=econ/cryptoccy/digitcorrupt.md" title="加密币是经济学家所说的纯泡沫，一种内在价值为零的资产" target="_blank">诺奖得主梯若尔:加密币是纯泡沫</a></li>
+                <li><a href="ql_md_template.html?my.md=econ/cryptoccy/digitcorrupt.md" title="是时候揭穿加密币的真面目了：一个犯罪行当" target="_blank"><b>诺奖得主</b>克鲁格曼:华盛顿的数字腐败</a></li>
+                <li><a href="ql_md_template.html?my.md=econ/cryptoccy/digitcorrupt.md" title="加密币是经济学家所说的纯泡沫，一种内在价值为零的资产" target="_blank"><b>诺奖得主</b>梯若尔:加密币是纯泡沫</a></li>
                 <li><a href="ql_md_template.html?my.md=econ/cryptoccy/BIS-stablecoin.md" title="国际清算银行（BIS）--常被称为中央银行的央行，在其2025年6月24日发布的年度经济报告中，对稳定币的货币属性提出了严肃质疑，称稳定币在衡量货币的三个关键标准上均不过关" target="_blank">国际清算银行:稳定币与货币相差甚远</a></li>
             </ul>
         </div>
@@ -55,7 +55,7 @@ A full example" target="_blank">Use C++ to code Py-method for Python</a></li>
             <ul class="link-list">
                 <li><a href="mdEditView.html" title="An extremely simple markdown tool" target="_blank">Edit markdown files in a browser [Click & <b>bookmark</b>]</a></li>
                 <li><a href="markdownView.html" title="An extremely simple markdown viewer" target="_blank">View markdown files via a browser [Click & <b>bookmark</b>]</a></li>
-                <li><a href="https://github.com/qiangliu-sd/folder-sharing-via-web" title="Turn your Windows into a HTTP server" target="_blank">Test <b>html</b> files on your own Windows PC</a></li>
+                <li><a href="https://github.com/qiangliu-sd/folder-sharing-via-web" title="Turn your Windows into a HTTP server" target="_blank">Test <b>HTML</b> files on your own Windows PC</a></li>
             </ul>
             <h3 class="subsection-title">Office Apps</h3>
             <ul class="link-list">
