--- a/index_chn.html
+++ b/index_chn.html
@@ -10,10 +10,10 @@
 <body>
     <table width="100%" cellpadding="0" cellspacing="0">
 <tbody><tr><td width=30%></td><td width=40% align="center"><b>Dr. Liu's Webpage</b></td><td align="right"><a href="index.html">English version</a></td></tr></tbody></table><div class="container">        <div class="column">
-            <h2 class="section-title">编程</h2>
+            <h2 class="section-title">编程技巧</h2>
             <h3 class="subsection-title">Python</h3>
             <ul class="link-list">
-                <li><a href="https://github.com/qiangliu-sd/ai-agent-LangGraph" title="A beach-town weather AI agent with all necessary details" target="_blank">基于LangGraph的智能体:可运行实例</a></li>
+                <li><a href="https://github.com/qiangliu-sd/ai-agent-LangGraph" title="A beach-town weather AI agent with all necessary details" target="_blank">基于LangGraph的<b>智能体</b>:可运行实例</a></li>
                 <li><a href="https://github.com/qiangliu-sd/enforcedDynaPyTkValid" title="1. Bulletproof enforced validating of Entry widgets;  
 2. Dynamic validating of ranges (or bounds) of user inputs via Entry widgets" target="_blank">基于JSON的Tkinter界面之输入强制校验</a></li>
             </ul>
@@ -30,13 +30,13 @@ A complete template" target="_blank">在C#中直接调用C函数</a></li>
                 <li><a href="https://github.com/qiangliu-sd/Cpp-Inside-Python" title="Implement a Py-method in C++: 
 A full example" target="_blank">用C++编写Python函数</a></li>
             </ul>
-            <h3 class="subsection-title">程序语言比较</h3>
+            <h3 class="subsection-title">软件工程</h3>
             <ul class="link-list">
-                <li><a href="ql_md_template.html?my.md=coding/proglangs/aiagent_vs_apps.md" title="A LLM with tools are called an AI agent" target="_blank">智能体与传统App:简单对比</a></li>
+                <li><a href="ql_md_template.html?my.md=coding/proglangs/aiagent_vs_apps.md" title="A LLM with tools is called an AI agent" target="_blank"><b>智能体</b>与传统App:简单对比</a></li>
                 <li><a href="ql_md_template.html?my.md=coding/proglangs/can_py_beat_cpp.md" title="C++ significantly outperforms NumPy (and Python) for both small and big arrays" target="_blank">Python能比C++更快吗？</a></li>
                 <li><a href="ql_md_template.html?my.md=coding/proglangs/py_entangle.md" title="C++ extensions can be an excellent solution to the problem of Python parallel entanglement" target="_blank">解决Python并行纠缠减慢的C++方案</a></li>
             </ul>
-            <h3 class="subsection-title">技巧</h3>
+            <h3 class="subsection-title">开发技巧</h3>
             <ul class="link-list">
                 <li><a href="https://github.com/qiangliu-sd/Windows11-self-signed-certificate" title="A working guide for signing a FILE using self-signed certificate on Windows 11" target="_blank">Windows11文件自签名逐步指南</a></li>
             </ul>
@@ -44,14 +44,14 @@ A full example" target="_blank">用C++编写Python函数</a></li>
             <h3 class="subsection-title">稳定（代）币</h3>
             <ul class="link-list">
                 <li><a href="ql_md_template.html?my.md=econ/cryptoccy/stablecoin.md" title="稳定币并非法定货币，风险很大" target="_blank">法（定货）币、加密代币与稳定代币</a></li>
-                <li><a href="ql_md_template.html?my.md=econ/cryptoccy/digitcorrupt.md" title="是时候揭穿加密币的真面目了：一个犯罪行当" target="_blank">诺奖得主克鲁格曼:华盛顿的数字腐败</a></li>
-                <li><a href="ql_md_template.html?my.md=econ/cryptoccy/digitcorrupt.md" title="加密币是经济学家所说的纯泡沫，一种内在价值为零的资产" target="_blank">诺奖得主梯若尔:加密币是纯泡沫</a></li>
+                <li><a href="ql_md_template.html?my.md=econ/cryptoccy/digitcorrupt.md" title="是时候揭穿加密币的真面目了：一个犯罪行当" target="_blank"><b>诺奖得主</b>克鲁格曼:华盛顿的数字腐败</a></li>
+                <li><a href="ql_md_template.html?my.md=econ/cryptoccy/digitcorrupt.md" title="加密币是经济学家所说的纯泡沫，一种内在价值为零的资产" target="_blank"><b>诺奖得主</b>梯若尔:加密币是纯泡沫</a></li>
                 <li><a href="ql_md_template.html?my.md=econ/cryptoccy/BIS-stablecoin.md" title="国际清算银行（BIS）--常被称为中央银行的央行，在其2025年6月24日发布的年度经济报告中，对稳定币的货币属性提出了严肃质疑，称稳定币在衡量货币的三个关键标准上均不过关" target="_blank">国际清算银行:稳定币与货币相差甚远</a></li>
             </ul>
         </div>
         <div class="column">
             <h2 class="section-title">我贡献的免费小法宝</h2>
-            <h3 class="subsection-title">编程Apps</h3>
+            <h3 class="subsection-title">开发Apps</h3>
             <ul class="link-list">
                 <li><a href="mdEditView.html" title="An extremely simple markdown tool" target="_blank">在浏览器里编辑markdown文件[点击<b>收藏</b>]</a></li>
                 <li><a href="markdownView.html" title="An extremely simple markdown viewer" target="_blank">在浏览器里查看markdown文件[点击<b>收藏</b>]</a></li>
