--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <table width="100%" cellpadding="0" cellspacing="0">
 <tbody><tr><td width=30%></td><td width=40% align="center"><b>Dr. Liu's Webpage</b></td><td align="right"><a href="index_chn.html">中文版</a></td></tr></tbody></table><div class="container">        <div class="column">
-            <h2 class="section-title">Coding Techniques</h2>
+            <h2 class="section-title">Programming Techniques</h2>
             <h3 class="subsection-title">Python</h3>
             <ul class="link-list">
                 <li><a href="https://github.com/qiangliu-sd/ai-agent-LangGraph" title="A beach-town weather AI agent with all necessary details" target="_blank"><b>AI agents</b> with LangGraph: A working example</a></li>
@@ -32,7 +32,7 @@ A full example" target="_blank">Use C++ to code Py-method for Python</a></li>
             </ul>
             <h3 class="subsection-title">Software Engineering</h3>
             <ul class="link-list">
-                <li><a href="ql_md_template.html?my.md=coding/proglangs/aiagent_vs_apps.md" title="A LLM with tools is called an AI agent" target="_blank"><b>AI Agents</b> vs Traditional Apps: A Simple Comparison</a></li>
+                <li><a href="ql_md_template.html?my.md=coding/proglangs/aiagent_vs_apps.md" title="A LLM with tools is called an AI agent" target="_blank"><b>AI Agents</b> vs traditional apps: A simple comparison</a></li>
                 <li><a href="ql_md_template.html?my.md=coding/proglangs/ai-no-replace-coder.md" title="1. Software developers will not be replaced by LLM-AI 
 2. LLM-AI can be an excellent assistant to developers" target="_blank">Will software developers be replaced by LLM-AI?</a></li>
                 <li><a href="ql_md_template.html?my.md=coding/proglangs/can_py_beat_cpp.md" title="C++ significantly outperforms NumPy (and Python) for both small and big arrays" target="_blank">Can Python outperform C++?</a></li>
@@ -40,15 +40,15 @@ A full example" target="_blank">Use C++ to code Py-method for Python</a></li>
             </ul>
             <h3 class="subsection-title">Dev Know-How</h3>
             <ul class="link-list">
-                <li><a href="https://github.com/qiangliu-sd/Windows11-self-signed-certificate" title="A working guide for signing a FILE using self-signed certificate on Windows 11" target="_blank">Self-sign certificate on Windows 11: A working guide</a></li>
+                <li><a href="https://github.com/qiangliu-sd/Windows11-self-signed-certificate" title="A working guide for signing a FILE using self-signed certificate on Windows 11" target="_blank">Self-sign certificate on Windows11: A working guide</a></li>
             </ul>
             <h2 class="section-title">经济谈</h2>
             <h3 class="subsection-title">稳定（代）币</h3>
             <ul class="link-list">
-                <li><a href="econ/cryptoccy/stablecoin.html" title="稳定币并非法定货币，风险很大" target="_blank">法（定货）币、加密代币与稳定代币</a></li>
+                <li><a href="econ/cryptoccy/stablecoin.html" title="稳定币并非法定货币，风险很大" target="_blank">货币、加密币与稳定币</a></li>
                 <li><a href="ql_md_template.html?my.md=econ/cryptoccy/digitcorrupt.md" title="是时候揭穿加密币的真面目了：一个犯罪行当" target="_blank"><b>诺奖得主</b>克鲁格曼:华府数字腐败</a></li>
-                <li><a href="ql_md_template.html?my.md=econ/cryptoccy/digitcorrupt.md" title="加密币是经济学家所说的纯泡沫，一种内在价值为零的资产" target="_blank"><b>诺奖得主</b>梯若尔:加密币是纯泡沫</a></li>
-                <li><a href="ql_md_template.html?my.md=econ/cryptoccy/BIS-stablecoin.md" title="国际清算银行（BIS）--常被称为中央银行的央行，在其2025年6月24日发布的年度经济报告中，对稳定币的货币属性提出了严肃质疑，称稳定币在衡量货币的三个关键标准上均不过关" target="_blank">国际清算银行:稳定币与货币相差甚远</a></li>
+                <li><a href="ql_md_template.html?my.md=econ/cryptoccy/digitcorrupt.md" title="加密币是经济学家所说的纯泡沫，一种内在价值为零的资产" target="_blank"><b>诺奖得主</b>梯若尔:加密币 纯泡沫</a></li>
+                <li><a href="ql_md_template.html?my.md=econ/cryptoccy/BIS-stablecoin.md" title="国际清算银行（BIS）--常被称为中央银行的央行，在其2025年6月24日发布的年度经济报告中，对稳定币的货币属性提出了严肃质疑，称稳定币在衡量货币的三个关键标准上均不过关" target="_blank">国际清算银行:稳定币非币</a></li>
             </ul>
         </div>
         <div class="column">
