--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ A full example" target="_blank">Use C++ to code Py-method for Python</a></li>
             </ul>
             <h3 class="subsection-title">Software Engineering</h3>
             <ul class="link-list">
-                <li><a href="ql_md_template.html?my.md=coding/proglangs/aiagent_vs_apps.md" title="A LLM with tools is called an AI agent" target="_blank"><b>AI Agents</b> vs traditional apps: A simple comparison</a></li>
+                <li><a href="ql_md_template.html?my.md=coding/proglangs/aiagent_vs_apps.md" title="A LLM with tools is called an AI agent" target="_blank"><b>AI agents</b> vs traditional apps: A simple comparison</a></li>
                 <li><a href="ql_md_template.html?my.md=coding/proglangs/ai-no-replace-coder.md" title="1. Software developers will not be replaced by LLM-AI 
 2. LLM-AI can be an excellent assistant to developers" target="_blank">Will software developers be replaced by LLM-AI?</a></li>
                 <li><a href="ql_md_template.html?my.md=coding/proglangs/can_py_beat_cpp.md" title="C++ significantly outperforms NumPy (and Python) for both small and big arrays" target="_blank">Can Python outperform C++?</a></li>
