--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <li><a href="https://github.com/qiangliu-sd/ai-agent-LangGraph" title="A beach-town weather AI agent with all necessary details" target="_blank"><b>AI agents</b> with LangGraph: A working example</a></li>
                 <li><a href="https://github.com/qiangliu-sd/enforcedDynaPyTkValid" title="1. Bulletproof enforced validating of Entry widgets;  
 2. Dynamic validating of ranges (or bounds) of user inputs via Entry widgets" target="_blank">Enforced Tkinter-validating with JSON</a></li>
+                <li><a href="ql_md_template.html?my.md=coding/proglangs/py_timezone.md" title="convert a time-zone meeting time to your local computer time" target="_blank">Turn a time-zone string into local system time: Python</a></li>
             </ul>
             <h3 class="subsection-title">C/C++ with Python, Java, C#</h3>
             <ul class="link-list">
@@ -37,18 +38,11 @@ A full example" target="_blank">Use C++ to code Py-method for Python</a></li>
 2. LLM-AI can be an excellent assistant to developers" target="_blank">Will software developers be replaced by LLM-AI?</a></li>
                 <li><a href="ql_md_template.html?my.md=coding/proglangs/can_py_beat_cpp.md" title="C++ significantly outperforms NumPy (and Python) for both small and big arrays" target="_blank">Can Python outperform C++?</a></li>
                 <li><a href="ql_md_template.html?my.md=coding/proglangs/py_entangle.md" title="C++ extensions can be an excellent solution to the problem of Python parallel entanglement" target="_blank">Python parallel entanglement: A C++ solution</a></li>
+                <li><a href="https://drive.google.com/file/d/1eHm2mz4mG9PtAt7FtNwLUu04tL8rUDJa/view?usp=drive_link" title="C/C++ Users Journal 6, 22-29, 2001" target="_blank">Implementing reusable mathematical procedures using C++</a></li>
             </ul>
             <h3 class="subsection-title">Dev Know-How</h3>
             <ul class="link-list">
                 <li><a href="https://github.com/qiangliu-sd/Windows11-self-signed-certificate" title="A working guide for signing a FILE using self-signed certificate on Windows 11" target="_blank">Self-sign certificate on Windows11: A working guide</a></li>
-            </ul>
-            <h2 class="section-title">经济谈</h2>
-            <h3 class="subsection-title">稳定（代）币</h3>
-            <ul class="link-list">
-                <li><a href="econ/cryptoccy/stablecoin.html" title="稳定币并非法定货币，风险很大" target="_blank">货币、加密币与稳定币</a></li>
-                <li><a href="ql_md_template.html?my.md=econ/cryptoccy/digitcorrupt.md" title="是时候揭穿加密币的真面目了：一个犯罪行当" target="_blank"><b>诺奖得主</b>克鲁格曼:华府数字腐败</a></li>
-                <li><a href="ql_md_template.html?my.md=econ/cryptoccy/digitcorrupt.md" title="加密币是经济学家所说的纯泡沫，一种内在价值为零的资产" target="_blank"><b>诺奖得主</b>梯若尔:加密币 纯泡沫</a></li>
-                <li><a href="ql_md_template.html?my.md=econ/cryptoccy/BIS-stablecoin.md" title="国际清算银行（BIS）--常被称为中央银行的央行，在其2025年6月24日发布的年度经济报告中，对稳定币的货币属性提出了严肃质疑，称稳定币在衡量货币的三个关键标准上均不过关" target="_blank">国际清算银行:稳定币非币</a></li>
             </ul>
         </div>
         <div class="column">
@@ -78,6 +72,14 @@ A full example" target="_blank">Use C++ to code Py-method for Python</a></li>
 4. Output price, delta, and gamma at once;  
 5. Compute implied volatility;  
 6. Include or exclude CB clauses (i.e., choices) easily" target="_blank">A high-performance (C++) CB pricing tool</a></li>
+            </ul>
+            <h2 class="section-title">经济谈</h2>
+            <h3 class="subsection-title">稳定（代）币</h3>
+            <ul class="link-list">
+                <li><a href="econ/cryptoccy/stablecoin.html" title="稳定币并非法定货币，风险很大" target="_blank">货币、加密币与稳定币</a></li>
+                <li><a href="ql_md_template.html?my.md=econ/cryptoccy/digitcorrupt.md" title="是时候揭穿加密币的真面目了：一个犯罪行当" target="_blank"><b>诺奖得主</b>克鲁格曼:华府数字腐败</a></li>
+                <li><a href="ql_md_template.html?my.md=econ/cryptoccy/digitcorrupt.md" title="加密币是经济学家所说的纯泡沫，一种内在价值为零的资产" target="_blank"><b>诺奖得主</b>梯若尔:加密币 纯泡沫</a></li>
+                <li><a href="ql_md_template.html?my.md=econ/cryptoccy/BIS-stablecoin.md" title="国际清算银行（BIS）--常被称为中央银行的央行，在其2025年6月24日发布的年度经济报告中，对稳定币的货币属性提出了严肃质疑，称稳定币在衡量货币的三个关键标准上均不过关" target="_blank">国际清算银行:稳定币非币</a></li>
             </ul>
         </div>
     </div></body></html>
