--- a/index_chn.html
+++ b/index_chn.html
@@ -16,6 +16,7 @@
                 <li><a href="https://github.com/qiangliu-sd/ai-agent-LangGraph" title="A beach-town weather AI agent with all necessary details" target="_blank">基于LangGraph的<b>智能体</b>:可运行实例</a></li>
                 <li><a href="https://github.com/qiangliu-sd/enforcedDynaPyTkValid" title="1. Bulletproof enforced validating of Entry widgets;  
 2. Dynamic validating of ranges (or bounds) of user inputs via Entry widgets" target="_blank">基于JSON的Tkinter界面之输入强制校验</a></li>
+                <li><a href="ql_md_template.html?my.md=coding/proglangs/py_timezone.md" title="convert a time-zone meeting time to your local computer time" target="_blank">Python中把时区字符串变成本地系统时间</a></li>
             </ul>
             <h3 class="subsection-title">C/C++与Python, Java, C#</h3>
             <ul class="link-list">
@@ -37,18 +38,11 @@ A full example" target="_blank">用C++编写Python函数</a></li>
 2. LLM-AI can be an excellent assistant to developers" target="_blank">大语言模型会取代程序员吗？</a></li>
                 <li><a href="ql_md_template.html?my.md=coding/proglangs/can_py_beat_cpp.md" title="C++ significantly outperforms NumPy (and Python) for both small and big arrays" target="_blank">Python能比C++更快吗？</a></li>
                 <li><a href="ql_md_template.html?my.md=coding/proglangs/py_entangle.md" title="C++ extensions can be an excellent solution to the problem of Python parallel entanglement" target="_blank">解决Python并行纠缠减慢的C++方案</a></li>
+                <li><a href="https://drive.google.com/file/d/1eHm2mz4mG9PtAt7FtNwLUu04tL8rUDJa/view?usp=drive_link" title="C/C++ Users Journal 6, 22-29, 2001" target="_blank">数学算法可重复使用的C++方案</a></li>
             </ul>
             <h3 class="subsection-title">开发技巧</h3>
             <ul class="link-list">
                 <li><a href="https://github.com/qiangliu-sd/Windows11-self-signed-certificate" title="A working guide for signing a FILE using self-signed certificate on Windows 11" target="_blank">Windows11文件自签名逐步指南</a></li>
-            </ul>
-            <h2 class="section-title">经济谈</h2>
-            <h3 class="subsection-title">稳定（代）币</h3>
-            <ul class="link-list">
-                <li><a href="econ/cryptoccy/stablecoin.html" title="稳定币并非法定货币，风险很大" target="_blank">货币、加密币与稳定币</a></li>
-                <li><a href="ql_md_template.html?my.md=econ/cryptoccy/digitcorrupt.md" title="是时候揭穿加密币的真面目了：一个犯罪行当" target="_blank"><b>诺奖得主</b>克鲁格曼:华府数字腐败</a></li>
-                <li><a href="ql_md_template.html?my.md=econ/cryptoccy/digitcorrupt.md" title="加密币是经济学家所说的纯泡沫，一种内在价值为零的资产" target="_blank"><b>诺奖得主</b>梯若尔:加密币 纯泡沫</a></li>
-                <li><a href="ql_md_template.html?my.md=econ/cryptoccy/BIS-stablecoin.md" title="国际清算银行（BIS）--常被称为中央银行的央行，在其2025年6月24日发布的年度经济报告中，对稳定币的货币属性提出了严肃质疑，称稳定币在衡量货币的三个关键标准上均不过关" target="_blank">国际清算银行:稳定币非币</a></li>
             </ul>
         </div>
         <div class="column">
@@ -78,6 +72,14 @@ A full example" target="_blank">用C++编写Python函数</a></li>
 4. Output price, delta, and gamma at once;  
 5. Compute implied volatility;  
 6. Include or exclude CB clauses (i.e., choices) easily" target="_blank">可转换债券C++高效定价系统</a></li>
+            </ul>
+            <h2 class="section-title">经济谈</h2>
+            <h3 class="subsection-title">稳定（代）币</h3>
+            <ul class="link-list">
+                <li><a href="econ/cryptoccy/stablecoin.html" title="稳定币并非法定货币，风险很大" target="_blank">货币、加密币与稳定币</a></li>
+                <li><a href="ql_md_template.html?my.md=econ/cryptoccy/digitcorrupt.md" title="是时候揭穿加密币的真面目了：一个犯罪行当" target="_blank"><b>诺奖得主</b>克鲁格曼:华府数字腐败</a></li>
+                <li><a href="ql_md_template.html?my.md=econ/cryptoccy/digitcorrupt.md" title="加密币是经济学家所说的纯泡沫，一种内在价值为零的资产" target="_blank"><b>诺奖得主</b>梯若尔:加密币 纯泡沫</a></li>
+                <li><a href="ql_md_template.html?my.md=econ/cryptoccy/BIS-stablecoin.md" title="国际清算银行（BIS）--常被称为中央银行的央行，在其2025年6月24日发布的年度经济报告中，对稳定币的货币属性提出了严肃质疑，称稳定币在衡量货币的三个关键标准上均不过关" target="_blank">国际清算银行:稳定币非币</a></li>
             </ul>
         </div>
     </div></body></html>
