--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
             <h3 class="subsection-title">Python</h3>
             <ul class="link-list">
                 <li><a href="https://github.com/qiangliu-sd/ai-agent-LangGraph" title="A beach-town weather AI agent with all necessary details" target="_blank"><b>AI agents</b> with LangGraph: A working example</a></li>
-                <li><a href="https://github.com/qiangliu-sd/enforcedDynaPyTkValid" title="1. Bulletproof enforced validating of Entry widgets;  
+                <li><a href="ql_md_template.html?my.md=coding/proglangs/py_enforced-validate.md" title="1. Bulletproof enforced validating of Entry widgets;  
 2. Dynamic validating of ranges (or bounds) of user inputs via Entry widgets" target="_blank">Enforced Tkinter-validating with JSON</a></li>
-                <li><a href="ql_md_template.html?my.md=coding/proglangs/py_timezone.md" title="convert a time-zone meeting time to your local computer time" target="_blank">Turn a time-zone string into local system time: Python</a></li>
+                <li><a href="ql_md_template.html?my.md=coding/proglangs/py_free-msg-box.md" title="Free-standing (non-blocking) message box
+pop-up (and pop-off) message box  
+ttk.Button & status bar" target="_blank">Free-standing message box, popup, and Tkinter tricks</a></li>
+                <li><a href="ql_md_template.html?my.md=coding/proglangs/py_timezone.md" title="convert a time-zone meeting time to your local computer time" target="_blank">Turn a time-zone string into local time: Python</a></li>
             </ul>
             <h3 class="subsection-title">C/C++ with Python, Java, C#</h3>
             <ul class="link-list">
