--- a/index_chn.html
+++ b/index_chn.html
@@ -14,9 +14,12 @@
             <h3 class="subsection-title">Python</h3>
             <ul class="link-list">
                 <li><a href="https://github.com/qiangliu-sd/ai-agent-LangGraph" title="A beach-town weather AI agent with all necessary details" target="_blank">基于LangGraph的<b>智能体</b>:可运行实例</a></li>
-                <li><a href="https://github.com/qiangliu-sd/enforcedDynaPyTkValid" title="1. Bulletproof enforced validating of Entry widgets;  
+                <li><a href="ql_md_template.html?my.md=coding/proglangs/py_enforced-validate.md" title="1. Bulletproof enforced validating of Entry widgets;  
 2. Dynamic validating of ranges (or bounds) of user inputs via Entry widgets" target="_blank">基于JSON的Tkinter界面之输入强制校验</a></li>
-                <li><a href="ql_md_template.html?my.md=coding/proglangs/py_timezone.md" title="convert a time-zone meeting time to your local computer time" target="_blank">Python中把时区字符串变成本地系统时间</a></li>
+                <li><a href="ql_md_template.html?my.md=coding/proglangs/py_free-msg-box.md" title="Free-standing (non-blocking) message box
+pop-up (and pop-off) message box  
+ttk.Button & status bar" target="_blank">独立对话窗、弹出窗及Tkinter小技巧</a></li>
+                <li><a href="ql_md_template.html?my.md=coding/proglangs/py_timezone.md" title="convert a time-zone meeting time to your local computer time" target="_blank">Python中把时区字符串变成本地时间</a></li>
             </ul>
             <h3 class="subsection-title">C/C++与Python, Java, C#</h3>
             <ul class="link-list">
