--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@ A full example" target="_blank">Use C++ to code Py-method for Python</a></li>
 2. LLM-AI can be an excellent assistant to developers" target="_blank">Will software developers be replaced by LLM-AI?</a></li>
                 <li><a href="ql_md_template.html?my.md=coding/proglangs/can_py_beat_cpp.md" title="C++ significantly outperforms NumPy (and Python) for both small and big arrays" target="_blank">Can Python outperform C++?</a></li>
                 <li><a href="ql_md_template.html?my.md=coding/proglangs/py_entangle.md" title="C++ extensions can be an excellent solution to the problem of Python parallel entanglement" target="_blank">Python parallel entanglement: A C++ solution</a></li>
-                <li><a href="https://drive.google.com/file/d/1eHm2mz4mG9PtAt7FtNwLUu04tL8rUDJa/view?usp=drive_link" title="C/C++ Users Journal 6, 22-29, 2001" target="_blank">Implementing reusable mathematical procedures using C++</a></li>
+                <li><a href="https://drive.google.com/file/d/1koxO84BpixDfCNESbTSr-IF7zhRBcDAh/view?usp=drive_link" title="Reusing Stubborn Algorithms: Packaging is the Key
+Feature article on the cover, C/C++ Users Journal 6, 22-29, 2001" target="_blank">Implementing C++ reusable mathematical procedures</a></li>
             </ul>
             <h3 class="subsection-title">Dev Know-How</h3>
             <ul class="link-list">
