--- a/index_chn.html
+++ b/index_chn.html
@@ -41,7 +41,8 @@ A full example" target="_blank">用C++编写Python函数</a></li>
 2. LLM-AI can be an excellent assistant to developers" target="_blank">大语言模型会取代程序员吗？</a></li>
                 <li><a href="ql_md_template.html?my.md=coding/proglangs/can_py_beat_cpp.md" title="C++ significantly outperforms NumPy (and Python) for both small and big arrays" target="_blank">Python能比C++更快吗？</a></li>
                 <li><a href="ql_md_template.html?my.md=coding/proglangs/py_entangle.md" title="C++ extensions can be an excellent solution to the problem of Python parallel entanglement" target="_blank">解决Python并行纠缠减慢的C++方案</a></li>
-                <li><a href="https://drive.google.com/file/d/1eHm2mz4mG9PtAt7FtNwLUu04tL8rUDJa/view?usp=drive_link" title="C/C++ Users Journal 6, 22-29, 2001" target="_blank">数学算法可重复使用的C++方案</a></li>
+                <li><a href="https://drive.google.com/file/d/1koxO84BpixDfCNESbTSr-IF7zhRBcDAh/view?usp=drive_link" title="Reusing Stubborn Algorithms: Packaging is the Key
+Feature article on the cover, C/C++ Users Journal 6, 22-29, 2001" target="_blank">数学算法可重复使用的C++方案</a></li>
             </ul>
             <h3 class="subsection-title">开发技巧</h3>
             <ul class="link-list">
