--- a/index_chn.html
+++ b/index_chn.html
@@ -59,6 +59,13 @@ Feature article on the cover, C/C++ Users Journal 6, 22-29, 2001" target="_blank
             </ul>
             <h3 class="subsection-title">办公Apps</h3>
             <ul class="link-list">
+                <li><a href="https://github.com/qiangliu-sd/life-events-organizer" title="1. Annual events
+2. Count downs
+3. Routine reminders
+4. Renewals
+5. Birthdays
+6. To-do list
+7. Two noticing-period events" target="_blank">管理生活中的要事</a></li>
                 <li><a href="https://github.com/qiangliu-sd/docx-pdf-merger" title="1. Order files by dragging files up or down vertically;  
 2. Remove a file by double-click" target="_blank">将docx文件、pdf文件合并为pdf</a></li>
                 <li><a href="https://github.com/qiangliu-sd/folder-sharing-via-web" title="Turn your Windows into a WEB server to share files across LAN" target="_blank">通过浏览器共享局域网上的<b>文件夹</b></a></li>
