--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
             <h3 class="subsection-title">Python</h3>
             <ul class="link-list">
                 <li><a href="https://github.com/qiangliu-sd/ai-agent-LangGraph" title="A beach-town weather AI agent with all necessary details" target="_blank"><b>AI agents</b> with LangGraph: A working example</a></li>
-                <li><a href="ql_md_template.html?my.md=coding/proglangs/py_enforced-validate.md" title="1. Bulletproof enforced validating of Entry widgets;  
+                <li><a href="ql_md_template.html?my.md=coding/proglangs/py_enforced-validate.md" title="1. Bulletproof enforced validating of Entry widgets
 2. Dynamic validating of ranges (or bounds) of user inputs via Entry widgets" target="_blank">Enforced Tkinter-validating with JSON</a></li>
                 <li><a href="ql_md_template.html?my.md=coding/proglangs/py_free-msg-box.md" title="Free-standing (non-blocking) message box
 pop-up (and pop-off) message box  
-ttk.Button & status bar" target="_blank">Free-standing message box, popup, and Tkinter tricks</a></li>
+ttk.Button & status bar" target="_blank">Free-standing message box, popup, & Tkinter tricks</a></li>
                 <li><a href="ql_md_template.html?my.md=coding/proglangs/py_timezone.md" title="convert a time-zone meeting time to your local computer time" target="_blank">Turn a time-zone string into local time: Python</a></li>
             </ul>
             <h3 class="subsection-title">C/C++ with Python, Java, C#</h3>
@@ -36,7 +36,7 @@ A full example" target="_blank">Use C++ to code Py-method for Python</a></li>
             </ul>
             <h3 class="subsection-title">Software Engineering</h3>
             <ul class="link-list">
-                <li><a href="ql_md_template.html?my.md=coding/proglangs/aiagent_vs_apps.md" title="A LLM with tools is called an AI agent" target="_blank"><b>AI agents</b> vs traditional apps: A simple comparison</a></li>
+                <li><a href="ql_md_template.html?my.md=coding/proglangs/aiagent_vs_apps.md" title="A LLM with tools is called an AI agent" target="_blank"><b>AI agents</b> vs traditional apps: A quick comparison</a></li>
                 <li><a href="ql_md_template.html?my.md=coding/proglangs/ai-no-replace-coder.md" title="1. Software developers will not be replaced by LLM-AI 
 2. LLM-AI can be an excellent assistant to developers" target="_blank">Will software developers be replaced by LLM-AI?</a></li>
                 <li><a href="ql_md_template.html?my.md=coding/proglangs/can_py_beat_cpp.md" title="C++ significantly outperforms NumPy (and Python) for both small and big arrays" target="_blank">Can Python outperform C++?</a></li>
@@ -66,7 +66,7 @@ Feature article on the cover, C/C++ Users Journal 6, 22-29, 2001" target="_blank
 5. Birthdays
 6. To-do list
 7. Two noticing-period events" target="_blank">Manage your life events</a></li>
-                <li><a href="https://github.com/qiangliu-sd/docx-pdf-merger" title="1. Order files by dragging files up or down vertically;  
+                <li><a href="https://github.com/qiangliu-sd/docx-pdf-merger" title="1. Order files by dragging files up or down vertically
 2. Remove a file by double-click" target="_blank">Merge docx and/or pdf files into one pdf</a></li>
                 <li><a href="https://github.com/qiangliu-sd/folder-sharing-via-web" title="Turn your Windows into a WEB server to share files across LAN" target="_blank">Share your <b>folder</b> on LAN via a browser</a></li>
             </ul>
@@ -77,12 +77,12 @@ Feature article on the cover, C/C++ Users Journal 6, 22-29, 2001" target="_blank
             </ul>
             <h3 class="subsection-title">Rocket Finance</h3>
             <ul class="link-list">
-                <li><a href="https://github.com/qiangliu-sd/cvt-bond-pricer" title="1.Include my own algorithm (CRP) for provisional call/put;  
-2. Finite difference solving the BSM or AFV PDE;  
-3. Suitable for US or China market;  
-4. Output price, delta, and gamma at once;  
-5. Compute implied volatility;  
-6. Include or exclude CB clauses (i.e., choices) easily" target="_blank">A high-performance (C++) CB pricing tool</a></li>
+                <li><a href="https://github.com/qiangliu-sd/cvt-bond-pricer" title="1.Include my own algorithm (CRP) for provisional call/put
+2. Finite difference solving the BSM or AFV PDE
+3. Suitable for US or China market
+4. Output price, delta, and gamma at once
+5. Compute implied volatility
+6. Include or exclude CB clauses easily" target="_blank">A C++ convertible bond pricing App</a></li>
             </ul>
             <h2 class="section-title">经济谈</h2>
             <h3 class="subsection-title">稳定（代）币</h3>
