--- a/index_chn.html
+++ b/index_chn.html
@@ -14,7 +14,7 @@
             <h3 class="subsection-title">Python</h3>
             <ul class="link-list">
                 <li><a href="https://github.com/qiangliu-sd/ai-agent-LangGraph" title="A beach-town weather AI agent with all necessary details" target="_blank">基于LangGraph的<b>智能体</b>:可运行实例</a></li>
-                <li><a href="ql_md_template.html?my.md=coding/proglangs/py_enforced-validate.md" title="1. Bulletproof enforced validating of Entry widgets;  
+                <li><a href="ql_md_template.html?my.md=coding/proglangs/py_enforced-validate.md" title="1. Bulletproof enforced validating of Entry widgets
 2. Dynamic validating of ranges (or bounds) of user inputs via Entry widgets" target="_blank">基于JSON的Tkinter界面之输入强制校验</a></li>
                 <li><a href="ql_md_template.html?my.md=coding/proglangs/py_free-msg-box.md" title="Free-standing (non-blocking) message box
 pop-up (and pop-off) message box  
@@ -66,7 +66,7 @@ Feature article on the cover, C/C++ Users Journal 6, 22-29, 2001" target="_blank
 5. Birthdays
 6. To-do list
 7. Two noticing-period events" target="_blank">管理生活中的要事</a></li>
-                <li><a href="https://github.com/qiangliu-sd/docx-pdf-merger" title="1. Order files by dragging files up or down vertically;  
+                <li><a href="https://github.com/qiangliu-sd/docx-pdf-merger" title="1. Order files by dragging files up or down vertically
 2. Remove a file by double-click" target="_blank">将docx文件、pdf文件合并为pdf</a></li>
                 <li><a href="https://github.com/qiangliu-sd/folder-sharing-via-web" title="Turn your Windows into a WEB server to share files across LAN" target="_blank">通过浏览器共享局域网上的<b>文件夹</b></a></li>
             </ul>
@@ -77,12 +77,12 @@ Feature article on the cover, C/C++ Users Journal 6, 22-29, 2001" target="_blank
             </ul>
             <h3 class="subsection-title">火箭科学家之金融</h3>
             <ul class="link-list">
-                <li><a href="https://github.com/qiangliu-sd/cvt-bond-pricer" title="1.Include my own algorithm (CRP) for provisional call/put;  
-2. Finite difference solving the BSM or AFV PDE;  
-3. Suitable for US or China market;  
-4. Output price, delta, and gamma at once;  
-5. Compute implied volatility;  
-6. Include or exclude CB clauses (i.e., choices) easily" target="_blank">可转换债券C++高效定价系统</a></li>
+                <li><a href="https://github.com/qiangliu-sd/cvt-bond-pricer" title="1.Include my own algorithm (CRP) for provisional call/put
+2. Finite difference solving the BSM or AFV PDE
+3. Suitable for US or China market
+4. Output price, delta, and gamma at once
+5. Compute implied volatility
+6. Include or exclude CB clauses easily" target="_blank">可转换债券C++高效定价系统</a></li>
             </ul>
             <h2 class="section-title">经济谈</h2>
             <h3 class="subsection-title">稳定（代）币</h3>
