--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@ Feature article on the cover, C/C++ Users Journal 6, 22-29, 2001" target="_blank
             <h3 class="subsection-title">Dev Know-How</h3>
             <ul class="link-list">
                 <li><a href="https://github.com/qiangliu-sd/Windows11-self-signed-certificate" title="A working guide for signing a FILE using self-signed certificate on Windows 11" target="_blank">Self-sign certificate on Windows11: A working guide</a></li>
+                <li><a href="https://qiangliu-2.github.io/ql_md_template.html?my.md=qpedia/github-web-server.md" title="Free and easy personal webpage" target="_blank">Use GitHub as a free web server</a></li>
             </ul>
             <h3 class="subsection-title">Office Apps</h3>
             <ul class="link-list">
