--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 pop-up (and pop-off) message box  
 ttk.Button & status bar" target="_blank">Free-standing message box, popup, & Tkinter tricks</a></li>
                 <li><a href="ql_md_template.html?my.md=coding/proglangs/py_timezone.md" title="convert a time-zone meeting time to your local computer time" target="_blank">Turn a time-zone string into local time: Python</a></li>
+                <li><a href="ql_md_template.html?my.md=coding/proglangs/py-script.md" title="A working example with Button & Input working with PyScript" target="_blank">PyScript in HTML: A working example</a></li>
             </ul>
             <h3 class="subsection-title">C/C++ with Python, Java, C#</h3>
             <ul class="link-list">
