--- a/index_chn.html
+++ b/index_chn.html
@@ -20,6 +20,7 @@
 pop-up (and pop-off) message box  
 ttk.Button & status bar" target="_blank">独立对话窗、弹出窗及Tkinter小技巧</a></li>
                 <li><a href="ql_md_template.html?my.md=coding/proglangs/py_timezone.md" title="convert a time-zone meeting time to your local computer time" target="_blank">Python中把时区字符串变成本地时间</a></li>
+                <li><a href="ql_md_template.html?my.md=coding/proglangs/py-script.md" title="A working example with Button & Input working with PyScript" target="_blank">HTML中的PyScript:可运行实例</a></li>
             </ul>
             <h3 class="subsection-title">C/C++与Python, Java, C#</h3>
             <ul class="link-list">
