--- a/index.html
+++ b/index.html
@@ -56,10 +56,11 @@ Feature article on the cover, C/C++ Users Journal 6, 22-29, 2001" target="_blank
                 <li><a href="markdownView.html" title="An extremely simple markdown viewer" target="_blank">View markdown files via a browser [Click & <b>bookmark</b>]</a></li>
                 <li><a href="https://github.com/qiangliu-sd/folder-sharing-via-web" title="Turn your Windows into a HTTP server" target="_blank">Test <b>HTML</b> files on your own Windows PC</a></li>
             </ul>
-            <h3 class="subsection-title">Dev Know-How</h3>
+            <h3 class="subsection-title">Dev Know-how</h3>
             <ul class="link-list">
                 <li><a href="https://github.com/qiangliu-sd/Windows11-self-signed-certificate" title="A working guide for signing a FILE using self-signed certificate on Windows 11" target="_blank">Self-sign certificate on Windows11: A working guide</a></li>
                 <li><a href="https://qiangliu-2.github.io/ql_md_template.html?my.md=qpedia/github-web-server.md" title="Free and easy personal webpage" target="_blank">Use GitHub as a free web server</a></li>
+                <li><a href="https://qiangliu-2.github.io/ql_md_template.html?my.md=qpedia/frii-link-github.md" title="Now you get a real domain for FREE" target="_blank">Link free frii.site domain to GitHub pages</a></li>
             </ul>
             <h3 class="subsection-title">Office Apps</h3>
             <ul class="link-list">
