--- a/index_chn.html
+++ b/index_chn.html
@@ -37,6 +37,7 @@ A full example" target="_blank">用C++编写Python函数</a></li>
             </ul>
             <h3 class="subsection-title">软件工程</h3>
             <ul class="link-list">
+                <li><a href="ql_md_template.html?my.md=coding/proglangs/what-wrong-w-ai-codes.md" title="Bad styles, bad implementation, inefficient double loops, and other issues" target="_blank">AI代码的错误何在？</a></li>
                 <li><a href="ql_md_template.html?my.md=coding/proglangs/aiagent_vs_apps.md" title="A LLM with tools is called an AI agent" target="_blank"><b>智能体</b>与传统App:简单对比</a></li>
                 <li><a href="ql_md_template.html?my.md=coding/proglangs/ai-no-replace-coder.md" title="1. Software developers will not be replaced by LLM-AI 
 2. LLM-AI can be an excellent assistant to developers" target="_blank">大语言模型会取代程序员吗？</a></li>
