--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@ A full example" target="_blank">Use C++ to code Py-method for Python</a></li>
             </ul>
             <h3 class="subsection-title">Software Engineering</h3>
             <ul class="link-list">
-                <li><a href="ql_md_template.html?my.md=coding/proglangs/what-wrong-w-ai-codes.md" title="Bad styles, bad implementation, inefficient double loops, and other issues" target="_blank">What's wrong with code written by AI?</a></li>
+                <li><a href="ql_md_template.html?my.md=coding/proglangs/what-wrong-w-ai-codes.md" title="Bad styles, bad implementation, inefficient double loops, and other issues" target="_blank">What can be wrong with code written by AI: Part 1?</a></li>
+                <li><a href="ql_md_template.html?my.md=coding/proglangs/what-wrong-w-ai-codes2.md" title="Bad styles, bad implementation, inefficient double loops, and other issues" target="_blank">What can be wrong with code written by AI: Part 2?</a></li>
                 <li><a href="ql_md_template.html?my.md=coding/proglangs/aiagent_vs_apps.md" title="A LLM with tools is called an AI agent" target="_blank"><b>AI agents</b> vs traditional apps: A quick comparison</a></li>
                 <li><a href="ql_md_template.html?my.md=coding/proglangs/ai-no-replace-coder.md" title="1. Software developers will not be replaced by LLM-AI 
 2. LLM-AI can be an excellent assistant to developers" target="_blank">Will software developers be replaced by LLM-AI?</a></li>
