--- a/ql_md_template.html
+++ b/ql_md_template.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<title id="mdTitle"></title>
+	<link rel="icon" type="image/jpg" href="images/ql.jpg">
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- base href="http://localhost:8000/" target="_blank">
